# mini_project

./: README.md
backend/: ._target  .gitignore  Cargo.toml  readme.md
backend/data/: 000016.sst  000018.sst  000026.sst  000035.sst  IDENTITY  MANIFEST-000022  MANIFEST-000030
backend/src/: auth.rs  db.rs  image_upload.rs  main.rs  models.rs
backend/src/routes/: auth.rs  mod.rs  protected.rs
backend/src/routes/chat/: chat.rs  mod.rs  models.rs
backend/src/routes/posts/: mod.rs  models.rs  posts.rs
backend/src/routes/projects/: mod.rs  models.rs  projects.rs
backend/static/: script.js
flutter_client/: pubspec.yaml
flutter_client/assets/lottie/: meditate.json  splash.json
flutter_client/ios/Runner/: Info.plist
flutter_client/ios/Runner.xcodeproj/: project.pbxproj
flutter_client/lib/: main.dart  testfile.dart
flutter_client/lib/common/: utils.dart
flutter_client/lib/common/animations/: page_transition.dart
flutter_client/lib/common/buttons/: app_ button.dart  pre_icon_button.dart  scale_button.dart
flutter_client/lib/common/constants/: app_colors.dart  (+3 more)
flutter_client/lib/features/: root_screen.dart  splash_screen.dart
react-client/: package-lock.json  package.json
react-client/src/: App.jsx  main.jsx
react-client/src/components/: Feed.jsx  Navbar.jsx  Post.jsx  Sidebar.jsx
react-client/src/pages/: Dashboard.jsx  Notifications.jsx  Profile.jsx  Search.jsx  SignIn.jsx  SignUp.jsx
react_client/: package-lock.json  package.json
react_client/src/: App.css  App.js
react_client/src/components/: signin.js  signup.css  signup.js
(+30 files in other folders)
