[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5", features = ["json", "secrets", "tls", "mtls"]}
serde = { version = "1.0.214",  features = ["derive"] }
serde_json = "1.0.132"
surrealdb = {version = "2.0.4", features = ["kv-rocksdb"]}
thiserror = "1.0.65"
tokio = {version = "1.41.0", features = ["full"]}
