[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
aws-config = "1.5.10"
aws-sdk-s3 = "1.63.0"
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5", features = ["json", "secrets", "tls", "mtls"]}
rocket_ws = "0.1.1"
serde = { version = "1.0.214",  features = ["derive"] }
serde_json = "1.0.132"
surrealdb = "2.0.4"
thiserror = "1.0.65"
tokio = {version = "1.41.0", features = ["full"]}
uuid = { version = "1.11.0", features = ["v4"] }
